--- a/package.json
+++ b/package.json
@@ -6,29 +6,51 @@
     "dev": "npx prisma generate dev --name init && next dev",
     "build": "npx prisma generate init && next build",
     "migrate:dev": "npx prisma generate dev --name init",
-    "start": "next start"
+    "start": "next start",
+    "scrape": "node --loader ts-node/esm --experimental-specifier-resolution=node ./scrapers/index.ts",
+    "pretty": "prettier --write .",
+    "lint": "next lint",
+    "format": "next lint && prettier --write ."
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@googlemaps/google-maps-services-js": "^3.3.41",
+    "@mapbox/mapbox-sdk": "^0.15.3",
+    "@mui/material": "^5.14.13",
     "@prisma/client": "^5.2.0",
     "atomic-state": "^2.3.8",
     "autoprefixer": "^10.4.15",
+    "axios": "^1.5.1",
     "bs-icon": "^0.0.6",
+    "cheerio": "^1.0.0-rc.12",
     "daisyui": "^3.7.3",
+    "g-i-s": "^2.1.7",
+    "http": "^0.0.1-security",
     "http-react": "^3.0.5",
+    "https": "^1.0.0",
+    "infisical-node": "^1.5.0",
     "js-cookie": "^3.0.5",
+    "mapbox-gl": "^2.15.0",
     "next": "^13.4.19",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-kuh": "^0.1.0",
+    "react-map-gl": "^7.1.6",
+    "request": "^2.79.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.5.4",
     "@types/js-cookie": "^3.0.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "eslint-config-next": "13.5.4",
     "prisma": "^5.2.0",
     "typescript": "^5.2.2"
   }
