--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@googlemaps/google-maps-services-js": "^3.3.41",
     "@mapbox/mapbox-sdk": "^0.15.3",
-    "@mui/material": "^5.14.13",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "@prisma/client": "^5.2.0",
     "atomic-state": "^2.3.8",
     "autoprefixer": "^10.4.15",
@@ -41,6 +42,7 @@
     "react-kuh": "^0.1.0",
     "react-map-gl": "^7.1.6",
     "request": "^2.79.0",
+    "swiper": "^11.0.4",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
