--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@prisma/client": "^5.2.0",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.521",
+    "@types/swiper": "^6.0.0",
     "atomic-state": "^2.3.8",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.1",
     "bs-icon": "^0.0.6",
     "cheerio": "^1.0.0-rc.12",
     "daisyui": "^3.7.3",
+    "fuse.js": "^7.0.0",
     "g-i-s": "^2.1.7",
     "http": "^0.0.1-security",
     "http-react": "^3.0.5",
@@ -42,7 +46,7 @@
     "react-kuh": "^0.1.0",
     "react-map-gl": "^7.1.6",
     "request": "^2.79.0",
-    "swiper": "^11.0.4",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
@@ -52,6 +56,7 @@
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "eslint": "^8.55.0",
     "eslint-config-next": "13.5.4",
     "prisma": "^5.2.0",
     "typescript": "^5.2.2"
